--- a/Frontend/Home.html
+++ b/Frontend/Home.html
@@ -43,10 +43,10 @@
     <div class="slider-container">
         <div class="slider">
             <div class="slides">
-                <div class="slide active"><img src="./../uu2.jpg" alt="Nature"></div>
-                <div class="slide"><img src="./../uu2.jpg" alt="Water"></div>
-                <div class="slide"><img src="./../uu2.jpg" alt="Mountain"></div>
-                <div class="slide"><img src="./../uu2.jpg" alt="Forest"></div>
+                <div class="slide active"><img src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvBZLb1x1RXnLhfqS5_43zXg7Fu0FrHQCvFg&s" alt="Nature"></div>
+                <div class="slide"><img src=" https://travel.home.sndimg.com/content/dam/images/travel/fullset/2012/08/20/70/waterfall-wonders_ss_001.rend.hgtvcom.1280.720.suffix/1491581026366.jpeg" alt="Water"></div>
+                <div class="slide"><img src=" https://cdn.pixabay.com/photo/2021/09/03/15/37/mountain-6596074_640.jpg" alt="Mountain"></div>
+                <div class="slide"><img src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMTIB_lAcv8_itguNaAIOdfNjXMRFTSaxA6g&s" alt="Forest"></div>
             </div>
             <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
             <button class="next" onclick="moveSlide(1)">&#10095;</button>
@@ -63,17 +63,17 @@
         <h2>Our Features</h2>
         <div class="cards">
             <div class="card">
-                <img src="https://source.unsplash.com/300x200/?design" alt="Design">
+                <img src= "https://public-images.interaction-design.org/literature/articles/heros/58a6cefb0249a.jpg?tr=w-1000" alt="Design">
                 <h3>Modern Design</h3>
                 <p>Our solutions are crafted with modern design principles in mind.</p>
             </div>
             <div class="card">
-                <img src="https://source.unsplash.com/300x200/?responsive" alt="Responsive">
+                <img src="https://cdn.quokkalabs.com/blog/object/20230818123504_7fe1287eea784341b31e464176ff24f2.webp" alt="Responsive">
                 <h3>Responsive Layout</h3>
                 <p>Designed to look stunning on all screen sizes.</p>
             </div>
             <div class="card">
-                <img src="https://source.unsplash.com/300x200/?innovation" alt="Innovation">
+                <img src="https://media.licdn.com/dms/image/D4D12AQHj__Jfg1PqQQ/article-cover_image-shrink_720_1280/0/1723197729600?e=2147483647&v=beta&t=UkgLkXjdAgLxMpu5IBtolo9QJGl11ZjqsGo2GD42Qww " alt="Innovation">
                 <h3>Innovation</h3>
                 <p>We innovate continuously to provide cutting-edge solutions.</p>
             </div>
